Done with excercises

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,7 +4,7 @@
 		<title>Ruby on Rails Tutorial Sample App | <%= @title %></title>
 		<%= csrf_meta_tag %>
 	</head>
-	<body>
+	<body BGCOLOR="#0066CC" TEXT="FFCC33">
 		<%= yield %>
 	</body>
 </html>
